--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOUND HOREG</title>
+    <title>CHOCO</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 
 </head>
 <body>
-    <h1>AKU SUKA NONTON SOUND HOREG</h1>
+    <h1>welcome</h1>
 </body>
 </html>
