--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>CHOCO</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+   
 
 </head>
 <body>
     <h1>welcome</h1>
+    <h2>to CHOCO</h2>
 </body>
 </html>
