html,css, and js

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
 </head>
 <body>
     <h1>welcome</h1>
+    <a href="a.html" target="_blank">
+        <button style="text-align: center;">Soeharto bio</button>
+    </a>
 </body>
 </html>
