html and css and js

--- a/index.html
+++ b/index.html
@@ -17,3 +17,6 @@
     </a>
 </body>
 </html>
+<a href="group.html" target="_blank">
+    <img src="/image/wa.png" alt="group" width="50" height="50" link="group.html">
+</a>
