--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>welcome</h1>
     <a href="a.html" target="_blank">
-        <button style="text-align: center;">Soeharto bio</button>
+        <button style="text-align: center;">Bio Chef</button>
     </a>
 </body>
 </html>
