--- a/biografi.html
+++ b/biografi.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHOCO</title>
+    <title>Biografi - CHOCO</title>
     <link rel="stylesheet" href="a.css">
     <script src="a.js" defer></script>
 </head>
 <body>
-    <h1>Information of Chef</h1>
-    <nav class ="navbar">
+     <nav class ="navbar">
     <ul>
         <li><a href="home.html">home</a></li>
         <li><a href="biografi.html">Biografi</a></li>
         <li><a href="game.html">Game</a></li>
     </ul>
 </nav>
+    <main>
+        <h1>Biografi Information</h1>
+        <p>This is the biografi page.</p>
+    </main>
 </body>
 </html>
