html and css sybau

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
 </head>
 <body>
-    <h1>welcome</h1>
-    <a href="a.html" target="_blank">
-        <button style="text-align: center;">Bio Chef</button>
-    </a>
+    <main>
+        <h1>welcome</h1>  
+    </main>
+    <nav class ="navbar">
+        <ul>
+           <li><a href="a.html" target="_blank">Main</a></li>
+           <li><a href="group.html" target="_blank">Group chat</a></li>
+        </ul>
+    </nav>
+    
 </body>
 </html>
-<a href="group.html" target="_blank">
-    <img src="/image/wa.png" alt="group" width="50" height="50" link="group.html">
-</a>
