--- a/game.html
+++ b/game.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game - CHOCO</title>
-    <link rel="stylesheet" href="a.css">
+    <link rel="stylesheet" href="game.css">
     <script src="a.js" defer></script>
 </head>
 <body>
      <nav class ="navbar">
-    <ul>
-        <li><a href="home.html">home</a></li>
-        <li><a href="biografi.html">Biografi</a></li>
-        <li><a href="game.html">Game</a></li>
-    </ul>
-</nav>
+        <ul>
+            <li><a href="home.html">home</a></li>
+            <li><a href="biografi.html">Biografi</a></li>
+            <li><a href="game.html">Game</a></li>
+        </ul>
+    </nav>
     <main>
         <h1>Game Information</h1>
         <p>This is the game page.</p>
+        <p2>Bisa</p2>
     </main>
+
 </body>
 </html>
