--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <ul>
            <li><a href="a.html" target="_blank">Main</a></li>
            <li><a href="group.html" target="_blank">Group chat</a></li>
+           <li><a href="cal.html" target="_blank">calculator</a></li>
         </ul>
     </nav>
     
