adminnya hitam ya ges ya

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
            <li><a href="a.html" target="_blank">Main</a></li>
            <li><a href="group.html" target="_blank">Group chat</a></li>
            <li><a href="cal.html" target="_blank">calculator</a></li>
+           <li><a href="Music.html" target="_blank">Music</a></li>
         </ul>
     </nav>
     
