eh ku pindahin ke html

--- a/a.html
+++ b/a.html
@@ -14,6 +14,7 @@
         <li><a href="home.html">home</a></li>
         <li><a href="biografi.html">Biografi</a></li>
         <li><a href="game.html">Game</a></li>
+        <li><a href="Music.html" target="_blank">Music</a></li>
     </ul>
 </nav>
 </body>
