--- a/a.html
+++ b/a.html
@@ -14,7 +14,9 @@
         <li><a href="home.html">home</a></li>
         <li><a href="biografi.html">Biografi</a></li>
         <li><a href="game.html">Game</a></li>
-        <li><a href="Music.html" target="_blank">Music 1 (Hare hare ya)</a></li>
+        <li><a href="Music.html" target="_blank">(Morangu)Hare hare ya</a></li>
+        <li><a href="musik2.html" target="_blank">(Raja iblis) love me</a></li>
+        
     </ul>
 </nav>
 </body>
