--- a/musik2.html
+++ b/musik2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Music App UI Design</title>
+  <title>Love Me</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="musik2.css">
   <audio src="/music/LOVE ME - LIL WAYNE FT. DRAKE FUTURE (Lyrics).mp3" controls autoplay hidden loop></audio>
