--- a/Music.html
+++ b/Music.html
@@ -7,7 +7,6 @@
   <title>Hare hare ya</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="Music.css">
-  <audio src="/music/aa.mp3" controls autoplay hidden loop></audio>
 </head>
 <body>
     <div class="container">
@@ -23,6 +22,8 @@
         <div class="tooltip">
           <div class="audio-name"><b>Hare hare ya - Rui</b></div>
           <div class="audio-tag"><b>Audio Libary</b></div>
+          <br></br>
+            <audio src="/music/aa.mp3" controls autoplay loop></audio>
         </div>
         </div>
       </div>
