--- a/musik2.html
+++ b/musik2.html
@@ -7,7 +7,6 @@
   <title>Love Me</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="musik2.css">
-  <audio src="/music/LOVE ME - LIL WAYNE FT. DRAKE FUTURE (Lyrics).mp3" controls autoplay hidden loop></audio>
 </head>
 <body>
     <div class="container">
@@ -23,6 +22,8 @@
         <div class="tooltip">
           <div class="audio-name"><b>Love Me- DRAKE</b></div>
           <div class="audio-tag"><b>Audio Libary</b></div>
+          <br>
+            <audio src="/music/LOVE ME - LIL WAYNE FT. DRAKE FUTURE (Lyrics).mp3" controls autoplay loop></audio>
         </div>
         </div>
       </div>
