--- a/Music.html
+++ b/Music.html
@@ -20,8 +20,8 @@
           <img src="image/2.gif" alt="">
         </div>
         <div class="tooltip">
-          <div class="audio-name"><b>Hare hare ya - Rui</b></div>
-          <div class="audio-tag"><b>Audio Libary</b></div>
+          <div class="audio-name"><b>Hare hare ya</b></div>
+          <div class="audio-tag"><b>Rui</b></div>
           <br></br>
             <audio src="/music/aa.mp3" controls autoplay loop></audio>
         </div>
