--- a/musik2.html
+++ b/musik2.html
@@ -20,8 +20,8 @@
           <img src="image/hmmm.gif" alt="">
         </div>
         <div class="tooltip">
-          <div class="audio-name"><b>Love Me- DRAKE</b></div>
-          <div class="audio-tag"><b>Audio Libary</b></div>
+          <div class="audio-name"><b>Love Me</b></div>
+          <div class="audio-tag"><b>Lil Wayne FT</b></div>
           <br>
             <audio src="/music/LOVE ME - LIL WAYNE FT. DRAKE FUTURE (Lyrics).mp3" controls autoplay loop></audio>
         </div>
