--- a/a.html
+++ b/a.html
@@ -16,7 +16,9 @@
         <li><a href="game.html">Game</a></li>
         <li><a href="Music.html" target="_blank">(Morangu)Hare hare ya</a></li>
         <li><a href="musik2.html" target="_blank">(Raja iblis) love me</a></li>
-        
+        <li><a href="music3.html" target="_blank">Feels</a></li>
+        <li><a href="Rapsodi.html" target="_blank">Rapsodi</a></li>
+
     </ul>
 </nav>
 </body>
