--- a/game.html
+++ b/game.html
@@ -19,6 +19,10 @@
         <h1>Game Information</h1>
         <p>This is the game page.</p>
         <p2>Bisa</p2>
+        <ul>
+>            <li><a href="T/parkour/index.html">BOLA LONCAT</a></li>
+
+        </ul>
     </main>
 
 </body>
